--- a/VSProjects/BindstoneClient/BindstoneClient_Windows/BindstoneClient_Windows.vcxproj.filters
+++ b/VSProjects/BindstoneClient/BindstoneClient_Windows/BindstoneClient_Windows.vcxproj.filters
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="..\..\Source\SolutionSpecific\BindstoneClient\main.cpp" />
-    <ClCompile Include="..\..\External\gl3w\src\gl3w.c" />
+    <ClCompile Include="$(SolutionDir)External\gl3w\src\gl3w.c" />
+    <ClCompile Include="$(SolutionDir)Source\SolutionSpecific\BindstoneClient\main.cpp" />
   </ItemGroup>
 </Project>
