--- a/External/VSProjects/WolfSSL_Android/WolfSSL_Android.vcxproj
+++ b/External/VSProjects/WolfSSL_Android/WolfSSL_Android.vcxproj
@@ -200,7 +200,7 @@
       <RuntimeTypeInfo>true</RuntimeTypeInfo>
       <CppLanguageStandard>c++1z</CppLanguageStandard>
       <ExceptionHandling>Enabled</ExceptionHandling>
-      <PreprocessorDefinitions>__ANDROID_API__=$(AndroidAPILevelNumber);BOOST_ASIO_USE_WOLFSSL;ASIO_USE_WOLFSSL;OPENSSL_ALL;WOLFSSL_JNI;WOLFSSL_DTLS;HAVE_CRL;HAVE_CRL_MONITOR;HAVE_OCSP;PERSIST_SEASON_CACHE;PERSIST_CERT_CACHE;ATOMIC_USER;HAVE_ECC;TFM_ECC256;HAVE_PK_CALLBACKS;HAVE_DH;USE_FAST_MATH;TFM_TIMING_RESISTANT;ECC_TIMING_RESISTANT;WC_RSA_BLINDING;TFM_NO_ASM;HAVE_TLS_EXTENSIONS;CEREAL_FUTURE_EXPERIMENTAL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>__ANDROID_API__=$(AndroidAPILevelNumber);OPENSSL_NO_SSL3;OPENSSL_NO_SSL2;ASIO_USE_WOLFSSL;BOOST_ASIO_USE_WOLFSSL;OPENSSL_ALL;WOLFSSL_JNI;WOLFSSL_DTLS;HAVE_CRL;HAVE_CRL_MONITOR;HAVE_OCSP;PERSIST_SEASON_CACHE;PERSIST_CERT_CACHE;ATOMIC_USER;HAVE_ECC;TFM_ECC256;HAVE_PK_CALLBACKS;HAVE_DH;USE_FAST_MATH;TFM_TIMING_RESISTANT;ECC_TIMING_RESISTANT;WC_RSA_BLINDING;TFM_NO_ASM;HAVE_TLS_EXTENSIONS;CEREAL_FUTURE_EXPERIMENTAL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <CompileAs>Default</CompileAs>
       <DebugInformationFormat>FullDebug</DebugInformationFormat>
       <PrecompiledHeaderCompileAs>CompileAsC</PrecompiledHeaderCompileAs>
@@ -217,7 +217,7 @@
       <RuntimeTypeInfo>true</RuntimeTypeInfo>
       <CppLanguageStandard>c++1z</CppLanguageStandard>
       <ExceptionHandling>Enabled</ExceptionHandling>
-      <PreprocessorDefinitions>__ANDROID_API__=$(AndroidAPILevelNumber);BOOST_ASIO_USE_WOLFSSL;ASIO_USE_WOLFSSL;OPENSSL_ALL;WOLFSSL_JNI;WOLFSSL_DTLS;HAVE_CRL;HAVE_CRL_MONITOR;HAVE_OCSP;PERSIST_SEASON_CACHE;PERSIST_CERT_CACHE;ATOMIC_USER;HAVE_ECC;TFM_ECC256;HAVE_PK_CALLBACKS;HAVE_DH;USE_FAST_MATH;TFM_TIMING_RESISTANT;ECC_TIMING_RESISTANT;WC_RSA_BLINDING;TFM_NO_ASM;HAVE_TLS_EXTENSIONS;CEREAL_FUTURE_EXPERIMENTAL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>__ANDROID_API__=$(AndroidAPILevelNumber);OPENSSL_NO_SSL3;OPENSSL_NO_SSL2;ASIO_USE_WOLFSSL;BOOST_ASIO_USE_WOLFSSL;OPENSSL_ALL;WOLFSSL_JNI;WOLFSSL_DTLS;HAVE_CRL;HAVE_CRL_MONITOR;HAVE_OCSP;PERSIST_SEASON_CACHE;PERSIST_CERT_CACHE;ATOMIC_USER;HAVE_ECC;TFM_ECC256;HAVE_PK_CALLBACKS;HAVE_DH;USE_FAST_MATH;TFM_TIMING_RESISTANT;ECC_TIMING_RESISTANT;WC_RSA_BLINDING;TFM_NO_ASM;HAVE_TLS_EXTENSIONS;CEREAL_FUTURE_EXPERIMENTAL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <CompileAs>Default</CompileAs>
       <DebugInformationFormat>FullDebug</DebugInformationFormat>
       <PrecompiledHeaderCompileAs>CompileAsC</PrecompiledHeaderCompileAs>
@@ -234,7 +234,7 @@
       <RuntimeTypeInfo>true</RuntimeTypeInfo>
       <CppLanguageStandard>c++1z</CppLanguageStandard>
       <ExceptionHandling>Enabled</ExceptionHandling>
-      <PreprocessorDefinitions>__ANDROID_API__=$(AndroidAPILevelNumber);BOOST_ASIO_USE_WOLFSSL;ASIO_USE_WOLFSSL;OPENSSL_ALL;WOLFSSL_JNI;WOLFSSL_DTLS;HAVE_CRL;HAVE_CRL_MONITOR;HAVE_OCSP;PERSIST_SEASON_CACHE;PERSIST_CERT_CACHE;ATOMIC_USER;HAVE_ECC;TFM_ECC256;HAVE_PK_CALLBACKS;HAVE_DH;USE_FAST_MATH;TFM_TIMING_RESISTANT;ECC_TIMING_RESISTANT;WC_RSA_BLINDING;TFM_NO_ASM;HAVE_TLS_EXTENSIONS;CEREAL_FUTURE_EXPERIMENTAL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>__ANDROID_API__=$(AndroidAPILevelNumber);OPENSSL_NO_SSL3;OPENSSL_NO_SSL2;ASIO_USE_WOLFSSL;BOOST_ASIO_USE_WOLFSSL;OPENSSL_ALL;WOLFSSL_JNI;WOLFSSL_DTLS;HAVE_CRL;HAVE_CRL_MONITOR;HAVE_OCSP;PERSIST_SEASON_CACHE;PERSIST_CERT_CACHE;ATOMIC_USER;HAVE_ECC;TFM_ECC256;HAVE_PK_CALLBACKS;HAVE_DH;USE_FAST_MATH;TFM_TIMING_RESISTANT;ECC_TIMING_RESISTANT;WC_RSA_BLINDING;TFM_NO_ASM;HAVE_TLS_EXTENSIONS;CEREAL_FUTURE_EXPERIMENTAL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <CompileAs>Default</CompileAs>
       <DebugInformationFormat>FullDebug</DebugInformationFormat>
       <PrecompiledHeaderCompileAs>CompileAsC</PrecompiledHeaderCompileAs>
@@ -251,7 +251,7 @@
       <RuntimeTypeInfo>true</RuntimeTypeInfo>
       <CppLanguageStandard>c++1z</CppLanguageStandard>
       <ExceptionHandling>Enabled</ExceptionHandling>
-      <PreprocessorDefinitions>__ANDROID_API__=$(AndroidAPILevelNumber);BOOST_ASIO_USE_WOLFSSL;ASIO_USE_WOLFSSL;OPENSSL_ALL;WOLFSSL_JNI;WOLFSSL_DTLS;HAVE_CRL;HAVE_CRL_MONITOR;HAVE_OCSP;PERSIST_SEASON_CACHE;PERSIST_CERT_CACHE;ATOMIC_USER;HAVE_ECC;TFM_ECC256;HAVE_PK_CALLBACKS;HAVE_DH;USE_FAST_MATH;TFM_TIMING_RESISTANT;ECC_TIMING_RESISTANT;WC_RSA_BLINDING;TFM_NO_ASM;HAVE_TLS_EXTENSIONS;CEREAL_FUTURE_EXPERIMENTAL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>__ANDROID_API__=$(AndroidAPILevelNumber);OPENSSL_NO_SSL3;OPENSSL_NO_SSL2;ASIO_USE_WOLFSSL;BOOST_ASIO_USE_WOLFSSL;OPENSSL_ALL;WOLFSSL_JNI;WOLFSSL_DTLS;HAVE_CRL;HAVE_CRL_MONITOR;HAVE_OCSP;PERSIST_SEASON_CACHE;PERSIST_CERT_CACHE;ATOMIC_USER;HAVE_ECC;TFM_ECC256;HAVE_PK_CALLBACKS;HAVE_DH;USE_FAST_MATH;TFM_TIMING_RESISTANT;ECC_TIMING_RESISTANT;WC_RSA_BLINDING;TFM_NO_ASM;HAVE_TLS_EXTENSIONS;CEREAL_FUTURE_EXPERIMENTAL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <CompileAs>Default</CompileAs>
       <DebugInformationFormat>FullDebug</DebugInformationFormat>
       <PrecompiledHeaderCompileAs>CompileAsC</PrecompiledHeaderCompileAs>
@@ -268,7 +268,7 @@
       <RuntimeTypeInfo>true</RuntimeTypeInfo>
       <CppLanguageStandard>c++1z</CppLanguageStandard>
       <ExceptionHandling>Enabled</ExceptionHandling>
-      <PreprocessorDefinitions>__ANDROID_API__=$(AndroidAPILevelNumber);BOOST_ASIO_USE_WOLFSSL;ASIO_USE_WOLFSSL;OPENSSL_ALL;WOLFSSL_JNI;WOLFSSL_DTLS;HAVE_CRL;HAVE_CRL_MONITOR;HAVE_OCSP;PERSIST_SEASON_CACHE;PERSIST_CERT_CACHE;ATOMIC_USER;HAVE_ECC;TFM_ECC256;HAVE_PK_CALLBACKS;HAVE_DH;USE_FAST_MATH;TFM_TIMING_RESISTANT;ECC_TIMING_RESISTANT;WC_RSA_BLINDING;TFM_NO_ASM;HAVE_TLS_EXTENSIONS;CEREAL_FUTURE_EXPERIMENTAL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>__ANDROID_API__=$(AndroidAPILevelNumber);OPENSSL_NO_SSL3;OPENSSL_NO_SSL2;ASIO_USE_WOLFSSL;BOOST_ASIO_USE_WOLFSSL;OPENSSL_ALL;WOLFSSL_JNI;WOLFSSL_DTLS;HAVE_CRL;HAVE_CRL_MONITOR;HAVE_OCSP;PERSIST_SEASON_CACHE;PERSIST_CERT_CACHE;ATOMIC_USER;HAVE_ECC;TFM_ECC256;HAVE_PK_CALLBACKS;HAVE_DH;USE_FAST_MATH;TFM_TIMING_RESISTANT;ECC_TIMING_RESISTANT;WC_RSA_BLINDING;TFM_NO_ASM;HAVE_TLS_EXTENSIONS;CEREAL_FUTURE_EXPERIMENTAL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <CompileAs>Default</CompileAs>
       <DebugInformationFormat>FullDebug</DebugInformationFormat>
       <PrecompiledHeaderCompileAs>CompileAsC</PrecompiledHeaderCompileAs>
@@ -285,7 +285,7 @@
       <RuntimeTypeInfo>true</RuntimeTypeInfo>
       <CppLanguageStandard>c++1z</CppLanguageStandard>
       <ExceptionHandling>Enabled</ExceptionHandling>
-      <PreprocessorDefinitions>__ANDROID_API__=$(AndroidAPILevelNumber);BOOST_ASIO_USE_WOLFSSL;ASIO_USE_WOLFSSL;OPENSSL_ALL;WOLFSSL_JNI;WOLFSSL_DTLS;HAVE_CRL;HAVE_CRL_MONITOR;HAVE_OCSP;PERSIST_SEASON_CACHE;PERSIST_CERT_CACHE;ATOMIC_USER;HAVE_ECC;TFM_ECC256;HAVE_PK_CALLBACKS;HAVE_DH;USE_FAST_MATH;TFM_TIMING_RESISTANT;ECC_TIMING_RESISTANT;WC_RSA_BLINDING;TFM_NO_ASM;HAVE_TLS_EXTENSIONS;CEREAL_FUTURE_EXPERIMENTAL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>__ANDROID_API__=$(AndroidAPILevelNumber);OPENSSL_NO_SSL3;OPENSSL_NO_SSL2;ASIO_USE_WOLFSSL;BOOST_ASIO_USE_WOLFSSL;OPENSSL_ALL;WOLFSSL_JNI;WOLFSSL_DTLS;HAVE_CRL;HAVE_CRL_MONITOR;HAVE_OCSP;PERSIST_SEASON_CACHE;PERSIST_CERT_CACHE;ATOMIC_USER;HAVE_ECC;TFM_ECC256;HAVE_PK_CALLBACKS;HAVE_DH;USE_FAST_MATH;TFM_TIMING_RESISTANT;ECC_TIMING_RESISTANT;WC_RSA_BLINDING;TFM_NO_ASM;HAVE_TLS_EXTENSIONS;CEREAL_FUTURE_EXPERIMENTAL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <CompileAs>Default</CompileAs>
       <DebugInformationFormat>FullDebug</DebugInformationFormat>
       <PrecompiledHeaderCompileAs>CompileAsC</PrecompiledHeaderCompileAs>
@@ -302,7 +302,7 @@
       <RuntimeTypeInfo>true</RuntimeTypeInfo>
       <CppLanguageStandard>c++1z</CppLanguageStandard>
       <ExceptionHandling>Enabled</ExceptionHandling>
-      <PreprocessorDefinitions>__ANDROID_API__=$(AndroidAPILevelNumber);BOOST_ASIO_USE_WOLFSSL;ASIO_USE_WOLFSSL;OPENSSL_ALL;WOLFSSL_JNI;WOLFSSL_DTLS;HAVE_CRL;HAVE_CRL_MONITOR;HAVE_OCSP;PERSIST_SEASON_CACHE;PERSIST_CERT_CACHE;ATOMIC_USER;HAVE_ECC;TFM_ECC256;HAVE_PK_CALLBACKS;HAVE_DH;USE_FAST_MATH;TFM_TIMING_RESISTANT;ECC_TIMING_RESISTANT;WC_RSA_BLINDING;TFM_NO_ASM;HAVE_TLS_EXTENSIONS;CEREAL_FUTURE_EXPERIMENTAL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>__ANDROID_API__=$(AndroidAPILevelNumber);OPENSSL_NO_SSL3;OPENSSL_NO_SSL2;ASIO_USE_WOLFSSL;BOOST_ASIO_USE_WOLFSSL;OPENSSL_ALL;WOLFSSL_JNI;WOLFSSL_DTLS;HAVE_CRL;HAVE_CRL_MONITOR;HAVE_OCSP;PERSIST_SEASON_CACHE;PERSIST_CERT_CACHE;ATOMIC_USER;HAVE_ECC;TFM_ECC256;HAVE_PK_CALLBACKS;HAVE_DH;USE_FAST_MATH;TFM_TIMING_RESISTANT;ECC_TIMING_RESISTANT;WC_RSA_BLINDING;TFM_NO_ASM;HAVE_TLS_EXTENSIONS;CEREAL_FUTURE_EXPERIMENTAL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <CompileAs>Default</CompileAs>
       <DebugInformationFormat>FullDebug</DebugInformationFormat>
       <PrecompiledHeaderCompileAs>CompileAsC</PrecompiledHeaderCompileAs>
@@ -319,7 +319,7 @@
       <RuntimeTypeInfo>true</RuntimeTypeInfo>
       <CppLanguageStandard>c++1z</CppLanguageStandard>
       <ExceptionHandling>Enabled</ExceptionHandling>
-      <PreprocessorDefinitions>__ANDROID_API__=$(AndroidAPILevelNumber);BOOST_ASIO_USE_WOLFSSL;ASIO_USE_WOLFSSL;OPENSSL_ALL;WOLFSSL_JNI;WOLFSSL_DTLS;HAVE_CRL;HAVE_CRL_MONITOR;HAVE_OCSP;PERSIST_SEASON_CACHE;PERSIST_CERT_CACHE;ATOMIC_USER;HAVE_ECC;TFM_ECC256;HAVE_PK_CALLBACKS;HAVE_DH;USE_FAST_MATH;TFM_TIMING_RESISTANT;ECC_TIMING_RESISTANT;WC_RSA_BLINDING;TFM_NO_ASM;HAVE_TLS_EXTENSIONS;CEREAL_FUTURE_EXPERIMENTAL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>__ANDROID_API__=$(AndroidAPILevelNumber);OPENSSL_NO_SSL3;OPENSSL_NO_SSL2;ASIO_USE_WOLFSSL;BOOST_ASIO_USE_WOLFSSL;OPENSSL_ALL;WOLFSSL_JNI;WOLFSSL_DTLS;HAVE_CRL;HAVE_CRL_MONITOR;HAVE_OCSP;PERSIST_SEASON_CACHE;PERSIST_CERT_CACHE;ATOMIC_USER;HAVE_ECC;TFM_ECC256;HAVE_PK_CALLBACKS;HAVE_DH;USE_FAST_MATH;TFM_TIMING_RESISTANT;ECC_TIMING_RESISTANT;WC_RSA_BLINDING;TFM_NO_ASM;HAVE_TLS_EXTENSIONS;CEREAL_FUTURE_EXPERIMENTAL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <CompileAs>Default</CompileAs>
       <DebugInformationFormat>FullDebug</DebugInformationFormat>
       <PrecompiledHeaderCompileAs>CompileAsC</PrecompiledHeaderCompileAs>
