--- a/VSProjects/BindstoneClient/BindstoneClient_Android/BindstoneClient_Android.vcxproj
+++ b/VSProjects/BindstoneClient/BindstoneClient_Android/BindstoneClient_Android.vcxproj
@@ -236,7 +236,7 @@
       <RuntimeTypeInfo>true</RuntimeTypeInfo>
       <CppLanguageStandard>c++1z</CppLanguageStandard>
       <ExceptionHandling>Enabled</ExceptionHandling>
-      <PreprocessorDefinitions>__ANDROID_API__=$(AndroidAPILevelNumber);OPENSSL_NO_SSL3;CEREAL_FUTURE_EXPERIMENTAL;BOOST_ASIO_USE_WOLFSSL;ASIO_USE_WOLFSSL;OPENSSL_ALL;WOLFSSL_JNI;WOLFSSL_DTLS;HAVE_CRL;HAVE_CRL_MONITOR;HAVE_OCSP;PERSIST_SEASON_CACHE;PERSIST_CERT_CACHE;ATOMIC_USER;HAVE_ECC;TFM_ECC356;HAVE_PK_CALLBACKS;HAVE_DH;USE_FAST_MATH;TFM_TIMING_RESISTANT;ECC_TIMING_RESISTANT;WC_RSA_BLINDING;TFM_NO_ASM;HAVE_TLS_EXTENSIONS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>__ANDROID_API__=$(AndroidAPILevelNumber);CEREAL_FUTURE_EXPERIMENTAL;OPENSSL_NO_SSL3;OPENSSL_NO_SSL2;ASIO_USE_WOLFSSL;BOOST_ASIO_USE_WOLFSSL;OPENSSL_ALL;WOLFSSL_JNI;WOLFSSL_DTLS;HAVE_CRL;HAVE_CRL_MONITOR;HAVE_OCSP;PERSIST_SEASON_CACHE;PERSIST_CERT_CACHE;ATOMIC_USER;HAVE_ECC;TFM_ECC356;HAVE_PK_CALLBACKS;HAVE_DH;USE_FAST_MATH;TFM_TIMING_RESISTANT;ECC_TIMING_RESISTANT;WC_RSA_BLINDING;TFM_NO_ASM;HAVE_TLS_EXTENSIONS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <CompileAs>CompileAsCpp</CompileAs>
       <DebugInformationFormat>FullDebug</DebugInformationFormat>
     </ClCompile>
@@ -252,7 +252,7 @@
       <RuntimeTypeInfo>true</RuntimeTypeInfo>
       <CppLanguageStandard>c++1z</CppLanguageStandard>
       <ExceptionHandling>Enabled</ExceptionHandling>
-      <PreprocessorDefinitions>__ANDROID_API__=$(AndroidAPILevelNumber);OPENSSL_NO_SSL3;CEREAL_FUTURE_EXPERIMENTAL;BOOST_ASIO_USE_WOLFSSL;ASIO_USE_WOLFSSL;OPENSSL_ALL;WOLFSSL_JNI;WOLFSSL_DTLS;HAVE_CRL;HAVE_CRL_MONITOR;HAVE_OCSP;PERSIST_SEASON_CACHE;PERSIST_CERT_CACHE;ATOMIC_USER;HAVE_ECC;TFM_ECC356;HAVE_PK_CALLBACKS;HAVE_DH;USE_FAST_MATH;TFM_TIMING_RESISTANT;ECC_TIMING_RESISTANT;WC_RSA_BLINDING;TFM_NO_ASM;HAVE_TLS_EXTENSIONS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>__ANDROID_API__=$(AndroidAPILevelNumber);CEREAL_FUTURE_EXPERIMENTAL;OPENSSL_NO_SSL3;OPENSSL_NO_SSL2;ASIO_USE_WOLFSSL;BOOST_ASIO_USE_WOLFSSL;OPENSSL_ALL;WOLFSSL_JNI;WOLFSSL_DTLS;HAVE_CRL;HAVE_CRL_MONITOR;HAVE_OCSP;PERSIST_SEASON_CACHE;PERSIST_CERT_CACHE;ATOMIC_USER;HAVE_ECC;TFM_ECC356;HAVE_PK_CALLBACKS;HAVE_DH;USE_FAST_MATH;TFM_TIMING_RESISTANT;ECC_TIMING_RESISTANT;WC_RSA_BLINDING;TFM_NO_ASM;HAVE_TLS_EXTENSIONS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <CompileAs>CompileAsCpp</CompileAs>
       <DebugInformationFormat>FullDebug</DebugInformationFormat>
     </ClCompile>
@@ -268,7 +268,7 @@
       <RuntimeTypeInfo>true</RuntimeTypeInfo>
       <CppLanguageStandard>c++1z</CppLanguageStandard>
       <ExceptionHandling>Enabled</ExceptionHandling>
-      <PreprocessorDefinitions>__ANDROID_API__=$(AndroidAPILevelNumber);OPENSSL_NO_SSL3;CEREAL_FUTURE_EXPERIMENTAL;BOOST_ASIO_USE_WOLFSSL;ASIO_USE_WOLFSSL;OPENSSL_ALL;WOLFSSL_JNI;WOLFSSL_DTLS;HAVE_CRL;HAVE_CRL_MONITOR;HAVE_OCSP;PERSIST_SEASON_CACHE;PERSIST_CERT_CACHE;ATOMIC_USER;HAVE_ECC;TFM_ECC356;HAVE_PK_CALLBACKS;HAVE_DH;USE_FAST_MATH;TFM_TIMING_RESISTANT;ECC_TIMING_RESISTANT;WC_RSA_BLINDING;TFM_NO_ASM;HAVE_TLS_EXTENSIONS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>__ANDROID_API__=$(AndroidAPILevelNumber);CEREAL_FUTURE_EXPERIMENTAL;OPENSSL_NO_SSL3;OPENSSL_NO_SSL2;ASIO_USE_WOLFSSL;BOOST_ASIO_USE_WOLFSSL;OPENSSL_ALL;WOLFSSL_JNI;WOLFSSL_DTLS;HAVE_CRL;HAVE_CRL_MONITOR;HAVE_OCSP;PERSIST_SEASON_CACHE;PERSIST_CERT_CACHE;ATOMIC_USER;HAVE_ECC;TFM_ECC356;HAVE_PK_CALLBACKS;HAVE_DH;USE_FAST_MATH;TFM_TIMING_RESISTANT;ECC_TIMING_RESISTANT;WC_RSA_BLINDING;TFM_NO_ASM;HAVE_TLS_EXTENSIONS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <CompileAs>CompileAsCpp</CompileAs>
       <DebugInformationFormat>FullDebug</DebugInformationFormat>
     </ClCompile>
@@ -284,7 +284,7 @@
       <RuntimeTypeInfo>true</RuntimeTypeInfo>
       <CppLanguageStandard>c++1z</CppLanguageStandard>
       <ExceptionHandling>Enabled</ExceptionHandling>
-      <PreprocessorDefinitions>__ANDROID_API__=$(AndroidAPILevelNumber);OPENSSL_NO_SSL3;CEREAL_FUTURE_EXPERIMENTAL;BOOST_ASIO_USE_WOLFSSL;ASIO_USE_WOLFSSL;OPENSSL_ALL;WOLFSSL_JNI;WOLFSSL_DTLS;HAVE_CRL;HAVE_CRL_MONITOR;HAVE_OCSP;PERSIST_SEASON_CACHE;PERSIST_CERT_CACHE;ATOMIC_USER;HAVE_ECC;TFM_ECC356;HAVE_PK_CALLBACKS;HAVE_DH;USE_FAST_MATH;TFM_TIMING_RESISTANT;ECC_TIMING_RESISTANT;WC_RSA_BLINDING;TFM_NO_ASM;HAVE_TLS_EXTENSIONS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>__ANDROID_API__=$(AndroidAPILevelNumber);CEREAL_FUTURE_EXPERIMENTAL;OPENSSL_NO_SSL3;OPENSSL_NO_SSL2;ASIO_USE_WOLFSSL;BOOST_ASIO_USE_WOLFSSL;OPENSSL_ALL;WOLFSSL_JNI;WOLFSSL_DTLS;HAVE_CRL;HAVE_CRL_MONITOR;HAVE_OCSP;PERSIST_SEASON_CACHE;PERSIST_CERT_CACHE;ATOMIC_USER;HAVE_ECC;TFM_ECC356;HAVE_PK_CALLBACKS;HAVE_DH;USE_FAST_MATH;TFM_TIMING_RESISTANT;ECC_TIMING_RESISTANT;WC_RSA_BLINDING;TFM_NO_ASM;HAVE_TLS_EXTENSIONS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <CompileAs>CompileAsCpp</CompileAs>
       <DebugInformationFormat>FullDebug</DebugInformationFormat>
     </ClCompile>
@@ -300,7 +300,7 @@
       <RuntimeTypeInfo>true</RuntimeTypeInfo>
       <CppLanguageStandard>c++1z</CppLanguageStandard>
       <ExceptionHandling>Enabled</ExceptionHandling>
-      <PreprocessorDefinitions>__ANDROID_API__=$(AndroidAPILevelNumber);OPENSSL_NO_SSL3;CEREAL_FUTURE_EXPERIMENTAL;BOOST_ASIO_USE_WOLFSSL;ASIO_USE_WOLFSSL;OPENSSL_ALL;WOLFSSL_JNI;WOLFSSL_DTLS;HAVE_CRL;HAVE_CRL_MONITOR;HAVE_OCSP;PERSIST_SEASON_CACHE;PERSIST_CERT_CACHE;ATOMIC_USER;HAVE_ECC;TFM_ECC356;HAVE_PK_CALLBACKS;HAVE_DH;USE_FAST_MATH;TFM_TIMING_RESISTANT;ECC_TIMING_RESISTANT;WC_RSA_BLINDING;TFM_NO_ASM;HAVE_TLS_EXTENSIONS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>__ANDROID_API__=$(AndroidAPILevelNumber);CEREAL_FUTURE_EXPERIMENTAL;OPENSSL_NO_SSL3;OPENSSL_NO_SSL2;ASIO_USE_WOLFSSL;BOOST_ASIO_USE_WOLFSSL;OPENSSL_ALL;WOLFSSL_JNI;WOLFSSL_DTLS;HAVE_CRL;HAVE_CRL_MONITOR;HAVE_OCSP;PERSIST_SEASON_CACHE;PERSIST_CERT_CACHE;ATOMIC_USER;HAVE_ECC;TFM_ECC356;HAVE_PK_CALLBACKS;HAVE_DH;USE_FAST_MATH;TFM_TIMING_RESISTANT;ECC_TIMING_RESISTANT;WC_RSA_BLINDING;TFM_NO_ASM;HAVE_TLS_EXTENSIONS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <CompileAs>CompileAsCpp</CompileAs>
       <DebugInformationFormat>FullDebug</DebugInformationFormat>
     </ClCompile>
@@ -316,7 +316,7 @@
       <RuntimeTypeInfo>true</RuntimeTypeInfo>
       <CppLanguageStandard>c++1z</CppLanguageStandard>
       <ExceptionHandling>Enabled</ExceptionHandling>
-      <PreprocessorDefinitions>__ANDROID_API__=$(AndroidAPILevelNumber);OPENSSL_NO_SSL3;CEREAL_FUTURE_EXPERIMENTAL;BOOST_ASIO_USE_WOLFSSL;ASIO_USE_WOLFSSL;OPENSSL_ALL;WOLFSSL_JNI;WOLFSSL_DTLS;HAVE_CRL;HAVE_CRL_MONITOR;HAVE_OCSP;PERSIST_SEASON_CACHE;PERSIST_CERT_CACHE;ATOMIC_USER;HAVE_ECC;TFM_ECC356;HAVE_PK_CALLBACKS;HAVE_DH;USE_FAST_MATH;TFM_TIMING_RESISTANT;ECC_TIMING_RESISTANT;WC_RSA_BLINDING;TFM_NO_ASM;HAVE_TLS_EXTENSIONS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>__ANDROID_API__=$(AndroidAPILevelNumber);CEREAL_FUTURE_EXPERIMENTAL;OPENSSL_NO_SSL3;OPENSSL_NO_SSL2;ASIO_USE_WOLFSSL;BOOST_ASIO_USE_WOLFSSL;OPENSSL_ALL;WOLFSSL_JNI;WOLFSSL_DTLS;HAVE_CRL;HAVE_CRL_MONITOR;HAVE_OCSP;PERSIST_SEASON_CACHE;PERSIST_CERT_CACHE;ATOMIC_USER;HAVE_ECC;TFM_ECC356;HAVE_PK_CALLBACKS;HAVE_DH;USE_FAST_MATH;TFM_TIMING_RESISTANT;ECC_TIMING_RESISTANT;WC_RSA_BLINDING;TFM_NO_ASM;HAVE_TLS_EXTENSIONS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <CompileAs>CompileAsCpp</CompileAs>
       <DebugInformationFormat>FullDebug</DebugInformationFormat>
     </ClCompile>
@@ -332,7 +332,7 @@
       <RuntimeTypeInfo>true</RuntimeTypeInfo>
       <CppLanguageStandard>c++1z</CppLanguageStandard>
       <ExceptionHandling>Enabled</ExceptionHandling>
-      <PreprocessorDefinitions>__ANDROID_API__=$(AndroidAPILevelNumber);OPENSSL_NO_SSL3;CEREAL_FUTURE_EXPERIMENTAL;BOOST_ASIO_USE_WOLFSSL;ASIO_USE_WOLFSSL;OPENSSL_ALL;WOLFSSL_JNI;WOLFSSL_DTLS;HAVE_CRL;HAVE_CRL_MONITOR;HAVE_OCSP;PERSIST_SEASON_CACHE;PERSIST_CERT_CACHE;ATOMIC_USER;HAVE_ECC;TFM_ECC356;HAVE_PK_CALLBACKS;HAVE_DH;USE_FAST_MATH;TFM_TIMING_RESISTANT;ECC_TIMING_RESISTANT;WC_RSA_BLINDING;TFM_NO_ASM;HAVE_TLS_EXTENSIONS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>__ANDROID_API__=$(AndroidAPILevelNumber);CEREAL_FUTURE_EXPERIMENTAL;OPENSSL_NO_SSL3;OPENSSL_NO_SSL2;ASIO_USE_WOLFSSL;BOOST_ASIO_USE_WOLFSSL;OPENSSL_ALL;WOLFSSL_JNI;WOLFSSL_DTLS;HAVE_CRL;HAVE_CRL_MONITOR;HAVE_OCSP;PERSIST_SEASON_CACHE;PERSIST_CERT_CACHE;ATOMIC_USER;HAVE_ECC;TFM_ECC356;HAVE_PK_CALLBACKS;HAVE_DH;USE_FAST_MATH;TFM_TIMING_RESISTANT;ECC_TIMING_RESISTANT;WC_RSA_BLINDING;TFM_NO_ASM;HAVE_TLS_EXTENSIONS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <CompileAs>CompileAsCpp</CompileAs>
       <DebugInformationFormat>FullDebug</DebugInformationFormat>
     </ClCompile>
@@ -348,7 +348,7 @@
       <RuntimeTypeInfo>true</RuntimeTypeInfo>
       <CppLanguageStandard>c++1z</CppLanguageStandard>
       <ExceptionHandling>Enabled</ExceptionHandling>
-      <PreprocessorDefinitions>__ANDROID_API__=$(AndroidAPILevelNumber);OPENSSL_NO_SSL3;CEREAL_FUTURE_EXPERIMENTAL;BOOST_ASIO_USE_WOLFSSL;ASIO_USE_WOLFSSL;OPENSSL_ALL;WOLFSSL_JNI;WOLFSSL_DTLS;HAVE_CRL;HAVE_CRL_MONITOR;HAVE_OCSP;PERSIST_SEASON_CACHE;PERSIST_CERT_CACHE;ATOMIC_USER;HAVE_ECC;TFM_ECC356;HAVE_PK_CALLBACKS;HAVE_DH;USE_FAST_MATH;TFM_TIMING_RESISTANT;ECC_TIMING_RESISTANT;WC_RSA_BLINDING;TFM_NO_ASM;HAVE_TLS_EXTENSIONS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>__ANDROID_API__=$(AndroidAPILevelNumber);CEREAL_FUTURE_EXPERIMENTAL;OPENSSL_NO_SSL3;OPENSSL_NO_SSL2;ASIO_USE_WOLFSSL;BOOST_ASIO_USE_WOLFSSL;OPENSSL_ALL;WOLFSSL_JNI;WOLFSSL_DTLS;HAVE_CRL;HAVE_CRL_MONITOR;HAVE_OCSP;PERSIST_SEASON_CACHE;PERSIST_CERT_CACHE;ATOMIC_USER;HAVE_ECC;TFM_ECC356;HAVE_PK_CALLBACKS;HAVE_DH;USE_FAST_MATH;TFM_TIMING_RESISTANT;ECC_TIMING_RESISTANT;WC_RSA_BLINDING;TFM_NO_ASM;HAVE_TLS_EXTENSIONS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <CompileAs>CompileAsCpp</CompileAs>
       <DebugInformationFormat>FullDebug</DebugInformationFormat>
     </ClCompile>
